# BlueZ_Bluetooth_Implementation

./: .gitignore  Makefile.am  Makefile.expand  Makefile.in  configure
expand/: CMakeLists.txt  btexpand.c  hal_test.c
expand/hal/: ble_api.h  hal_ble.c  hal_flash.c  hal_hw.c  hal_timer.c  hal_watchdog.c  ms_hal.h  ms_hal_ble.h  ms_hal_flash.h  ms_hal_hw.h  ms_hal_timer.h  ms_hal_watchdog.h
expand/impl/: advertising.c  advertising.h  client.c  client.h  gatt.c  gatt.h  impl_private.h
src/: advertising.c
